--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp07]
+
+[platformio]
+default_envs=d1_mini
+
+[env]
 platform = espressif8266
-board = esp07
 framework = arduino
 lib_deps = FastLED
+upload_speed= 230400
+
+[env:esp07]
+board = esp07
+
+[env:d1_mini]
+board = d1_mini
