--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,13 @@ default_envs=d1_mini
 platform = espressif8266
 framework = arduino
 lib_deps = FastLED
-upload_speed= 230400
+upload_speed= 460800
+
+extra_scripts = 
+    pre:build_versioning.py
+    pre:git-version.py
+
+
 
 [env:esp07]
 board = esp07
